# crates/server/src/models.rs
@@ -2,6 +2,7 @@ pub mod app;
 pub mod email_password;
 pub mod item;
 pub mod oauth_github;
+pub mod refresh_token;
 pub mod user;
 pub mod user_github;
 pub mod user_item;
